--- a/contact.html
+++ b/contact.html
@@ -537,9 +537,9 @@
         <div class="row no-gutters">
           <div class="col-lg-4">
             <div class="contact-map">
-              <iframe
+              <!-- <iframe
                 src="https://maps.google.com/maps?q=rstheme&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
-              ></iframe>
+              ></iframe> -->
             </div>
           </div>
           <div class="col-lg-4">
