--- a/projectmain.html
+++ b/projectmain.html
@@ -521,7 +521,7 @@
 			                                <a href="contact.html"><img src="images/blog/style1/1-2.png" alt=""></a>
 			                            </div>
 			                            <div class="blog-content">
-			                                <h3 class="blog-title"><a href="contact.html">	TOUCHSTONE WORKS LIMITED.</a></h3>
+			                                <h3 class="blog-title"><a href="contact.html">	TOUCHSTONE WORKS LIMITED.</a></h3>
 			                                <div class="blog-meta">
 			                                    <ul class="btm-cate">
 			                                        <li>
@@ -618,12 +618,12 @@
 			                                                <i class="fi fi-rr-calendar"></i>Jan 2018 –Feb 2020 
 			                                            </div>
 			                                        </li> 
-			                                        <li>
+			                                        <!-- <li>
 			                                            <div class="tag-line">
 			                                                <i class="fi fi-rr-book"></i>
 			                                                <a href="#">Educational</a>
 			                                            </div>
-			                                        </li> 
+			                                        </li>  -->
 			                                    </ul>
 			                                </div>
 			                                <div class="blog-desc">   
