--- a/faq.html
+++ b/faq.html
@@ -182,7 +182,7 @@
 														</ul> -->
 													</li>
 													<li class=" ">
-														<a href="#">Project</a>
+														<a href="projectmain.html">Project</a>
 														<!-- <ul class="sub-menu">
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Team</a>
@@ -339,7 +339,7 @@
 					    		<a href="about.html">About</a>
 					    	</li>
 					    	<li class="">
-					    		<a href="services.html">Services</a>
+					    		<a href="services-style1.html">Services</a>
 					    		<!-- <ul class="sub-menu">
 					    			<li><a href="services-style1.html">Services Style 1</a></li>
 					    			<li><a href="services-style2.html">Services Style 2</a></li>
@@ -357,7 +357,7 @@
 					    		</ul> -->
 					    	</li>
 					    	<li class="">
-					    		<a href="#">Projects</a>
+					    		<a href="projectmain.html">Projects</a>
 					    		<!-- <ul class="sub-menu">
 					    			<li class="last-item menu-item-has-children">
 					    			    <a href="#">Team</a>
