--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                                             </li>
                                             <li>
                                               	<i class="fi-rr-map-marker-home"></i>                                      
-												  10, OCHUMBA CLOSE, ENUGU          
+												  N0 10, ochumba close, Enugu         
                                             </li>
 										</ul>
 									</div>
@@ -367,7 +367,7 @@
 					  			</ul> -->
 					  		</li>
 					  		<li class="">
-					  			<a href="#">Project</a>
+					  			<a href="projectmain.html">Project</a>
 					  			<!-- <ul class="sub-menu">
 					  				<li class="last-item menu-item-has-children">
 					  				    <a href="#">Team</a>
@@ -411,6 +411,9 @@
 					  		<li>
 					  			<a href="gallery.html">Gallery</a>
 					  		</li>
+							  <li>
+								<a href="faq.html">FAQ</a>
+							</li>
 					  		<li>
 					  			<a href="contact.html">Contact</a>
 					  		</li>
@@ -426,7 +429,7 @@
 					                  </div>
 					                  <div class="info-content">
 					                      <h4 class="title">Contact</h4>
-					                      <em>  10, OCHUMBA CLOSE, ENUGU </em>
+					                      <em>  N0 10, ochumba close, Enugu </em>
 					                  </div>
 					              </div>
 					              <div class="address-list">
@@ -435,7 +438,9 @@
 					                  </div>
 					                  <div class="info-content">
 					                      <h4 class="title">Email</h4>
-					                      <em><a href="mailto:obistanley93@gmail.com">obistanley93@gmail.com</a></em>
+					                      <em><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng
+											">info@osesconsultantengineering<br>servicesltd.com.ng
+										  </a></em>
 					                  </div>
 					              </div>
 					              <div class="address-list">
@@ -494,7 +499,7 @@
 									OSES CONSULTANT & ENGINEERING SERVICES LTD
 								</h2>
 								<p class="desc pb-37">
-									OSES CONSULTANT & ENGINEERING SERVICES LTD is made up of experienced Engineers with professional practice embracing the full range of engineering services in Civil engineering, Electrical engineering, Mechanical engineering and Surveying / Soil investigation, with special expertise in the civil engineering and Water Resources sector. As a firm, OSES was established in 2012 by a group of very reputable, competent and experienced indigenous engineers who have been engaged in engineering practice in Nigeria and overseas for upwards of 10 years.
+									Oses consultant & engineering service ltd is made up of experienced engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying / soil investigation, with special expertise in the civil engineering and water resources sector. As a firm, Oses was established in 2012 by a group of very reputable, competent and experienced indigenous engineers who have been engaged in engineering practice in Nigeria and overseas for 10 years.
 								</p>
 								<div class="row y-middle">
 									<div class="col-lg-4 col-md-4 sm-mb-30">
@@ -528,7 +533,7 @@
 								<div class="row mt-47 md-mt-25">
 									<div  class="col-lg-6 col-md-4 sm-mb-30">
 										<div class="btn-part">
-											<a class="readon more know" href="about.html">Know more</a>
+											<a class="readon more know" href="contact.html">Know more</a>
 										</div>
 									</div>
 									<!-- <div class="col-lg-6 col-md-8">
@@ -555,7 +560,8 @@
 		                			experience
 		                		</h2>
 		                		<p class="desc desc8">
-									OSES is a firm of Consulting Engineers with professional practice embracing the full range of engineering services in Civil engineering, Electrical engineering, Mechanical engineering and Surveying/ Soil investigations.
+									
+OSES is a firm of consulting engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying/ soil investigations.
 								</p>
 		                	</div>
 		        	        <!-- Skillbar Section Start -->
@@ -695,8 +701,9 @@
 			                        <img src="images/contact/style1/icons/1.png" alt="images">
 			                    </div>
 			                    <div class="content-text">
-			                        <h4 class="title"><a href="#">NO 10, OCHUMBA CLOSE,  </a></h4>
-			                        <p class="services-txt">ACHARA LAYOUT, AGBANI ROAD,<br> ENUGU, ENUGU STATE, NIGERIA.</p>
+			                        <h4 class="title"><a href="#">	N0 10, ochumba close,  </a></h4>
+			                        <p class="services-txt">
+									 achara layout, agbani road, <br> Enugu, Enugu state, Nigeria</p>
 			                    </div>
 			                </div>
 			                <div class="contact-box mb-20">
@@ -707,7 +714,9 @@
 			                        <h4 class="title"><a href="#">Email us</a></h4>
 			                        <p class="services-txt">
 			                        	<!-- <a href="mailto:test@gamil.com">obistanley93@gmail.com.</a><br> -->
-			                        	<a href="mailto:test2@gamil.com">obistanley93@gmail.com.</a>
+			                        	<a href="mailto:info@osesconsultantengineeringservicesltd.com.ng
+											">info@osesconsultantengineeringservicesltd.com.ng
+											</a>
 			                        </p>
 			                    </div>
 			                </div>
@@ -777,7 +786,7 @@
 					</div>
 					<div class="textwidget">
 					  <p class="pb-20">
-				   OSES is a firm of Consulting Engineers with professional practice embracing the full range of engineering services in Civil engineering, Electrical engineering, Mechanical engineering and Surveying/ Soil investigations.
+						OSES is a firm of consulting engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying/ soil investigations
 					  </p>
 					  <p class="pb-25">
 						<strong>Opening Hours</strong> : Monday – Sat: 8am to 4pm
@@ -791,7 +800,8 @@
 					  <li>
 						<i class="fi fi-rr-map-marker-home"></i>
 						<div class="desc">
-						  NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD,<br> ENUGU, ENUGU STATE, NIGERIA.
+						 
+ N0 10, ochumba close, achara layout, agbani road, <br> Enugu, Enugu state, Nigeria
 						</div>
 					  </li>
 					  <li>
@@ -808,7 +818,9 @@
 						  <!-- <a href="mailto:support@devsdesign.com"
 							>support@devsdesign.com</a
 						  ><br /> -->
-						  <a href="mailto:obistanley93@gmail.com.">obistanley93@gmail.com. </a>
+						  <a href="mailto:info@osesconsultantengineeringservicesltd.com.ng
+							">info@osesconsultantengineering<br>servicesltd.com.ng
+						  </a>
 						</div>
 					  </li>
 					</ul>
@@ -871,14 +883,14 @@
 					  <li><a href="services-style1.html">Services</a></li>
 					  <li><a href="projectmain.html">Project</a></li>
 					  <li><a href="gallery.html">Gallery</a></li>
-					  <li><a href="faq.html">Faq</a></li>
+					  <li><a href="faq.html">FAQ</a></li>
 					  <li><a href="contact.html">Contact</a></li>
 					</ul>
 				  </div>
 				  <div class="col-lg-6">
 					<div class="copyright text-lg-start text-center">
 					  <p>
-						© 2023 Oses consultant & engineering services. signed By 
+						© 2023 Oses consultant & engineering services. design By 
 						<a href="https://www.zyantechnology.com.ng" target="blank"
 						  >Zayn Technology</a
 						>
