--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                       </li>
                       <li>
                         <i class="fi-rr-map-marker-home"></i>
-                        10, OCHUMBA CLOSE, ENUGU
+                        N0 10, ochumba close, Enugu
                       </li>
                     </ul>
                   </div>
@@ -479,7 +479,7 @@
                   </div>
                   <div class="info-content">
                     <h4 class="title">Contact</h4>
-                    <em> 10, OCHUMBA CLOSE, ENUGU </em>
+                    <em>  N0 10, ochumba close, Enugu </em>
                   </div>
                 </div>
                 <div class="address-list">
@@ -489,8 +489,8 @@
                   <div class="info-content">
                     <h4 class="title">Email</h4>
                     <em
-                      ><a href="mailto:obistanley93@gmail.com"
-                        >obistanley93@gmail.com</a
+                      ><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng"
+                        >info@osesconsultantengineering<br>servicesltd.com.ng</a
                       ></em
                     >
                   </div>
@@ -634,8 +634,7 @@
                   <div class="content-text">
                     <h4 class="title"><a href="#">Office address</a></h4>
                     <p class="services-txt">
-                      NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD, ENUGU,
-                      ENUGU STATE, NIGERIA
+						N0 10, ochumba close, achara layout, agbani road, Enugu, Enugu state, Nigeria
                     </p>
                   </div>
                 </div>
@@ -649,8 +648,8 @@
                     <h4 class="title"><a href="#">Email us</a></h4>
                     <!-- <span><a href="mailto:support@devsdesign.net">support@devsdesign.net</a></span><br> -->
                     <span
-                      ><a href="mailto:obistanley93@gmail.com"
-                        >obistanley93@gmail.com</a
+                      ><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng"
+                        >info@osesconsultantengineering<br>servicesltd.com.ng</a
                       ></span
                     >
                   </div>
@@ -773,10 +772,9 @@
               </div>
               <div class="textwidget">
                 <p class="pb-20">
-                  OSES is a firm of Consulting Engineers with professional
-                  practice embracing the full range of engineering services in
-                  Civil engineering, Electrical engineering, Mechanical
-                  engineering and Surveying/ Soil investigations.
+                  
+
+Oses is a firm of consulting engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying/ soil investigations.
                 </p>
                 <p class="pb-25">
                   <strong>Opening Hours</strong> : Monday – Sat: 8am to 4pm
@@ -803,8 +801,8 @@
                 <li>
                   <i class="fi fi-rr-map-marker-home"></i>
                   <div class="desc">
-                    NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD,<br />
-                    ENUGU, ENUGU STATE, NIGERIA.
+                    
+ N0 10, ochumba close, achara layout, agbani road, <br> Enugu, Enugu state, Nigeria
                   </div>
                 </li>
                 <li>
@@ -820,8 +818,8 @@
                     <!-- <a href="mailto:support@devsdesign.com"
 							>support@devsdesign.com</a
 						  ><br /> -->
-                    <a href="mailto:obistanley93@gmail.com."
-                      >obistanley93@gmail.com.
+                    <a href="mailto:info@osesconsultantengineeringservicesltd.com.ng"
+                      >info@osesconsultantengineering<br>servicesltd.com.ng
                     </a>
                   </div>
                 </li>
@@ -885,14 +883,14 @@
                 <li><a href="services-style1.html">Services</a></li>
                 <li><a href="projectmain.html">Project</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="faq.html">Faq</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <div class="copyright text-lg-start text-center">
                 <p>
-                  © 2023 Oses consultant & engineering services. signed By
+                  © 2023 Oses consultant & engineering services. design By
                   <a href="https://www.zyantechnology.com.ng" target="blank"
                     >Zayn Technology</a
                   >
