--- a/projectmain.html
+++ b/projectmain.html
@@ -77,7 +77,7 @@
                                             </li>
                                             <li>
                                               	<i class="fi-rr-map-marker-home"></i>                                      
-												  10, OCHUMBA CLOSE, ENUGU                 
+												  N0 10, ochumba close, Enugu                 
                                             </li>
 										</ul>
 									</div>
@@ -85,7 +85,7 @@
 								<div class="col-lg-5">
 									<div class="toolbar-sl-share">
 										<ul class="clearfix">
-											<li class="opening"> <em><i class="fi fi-rr-time-add"></i> Hours: Mon-Fri: 8.00 am - 7.00 pm</em> </li>
+											<li class="opening"> <em><i class="fi fi-rr-time-add"></i> Hours: Mon-Fri: 8.00 am - 4.00 pm</em> </li>
 											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 											<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 											<!-- <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li> -->
@@ -419,7 +419,7 @@
 									</div>
 									<div class="info-content">
 										<h4 class="title">Contact</h4>
-										<em>  10, OCHUMBA CLOSE, ENUGU </em>
+										<em>  N0 10, ochumba close, Enugu </em>
 									</div>
 								</div>
 								<div class="address-list">
@@ -428,7 +428,7 @@
 									</div>
 									<div class="info-content">
 										<h4 class="title">Email</h4>
-										<em><a href="mailto:obistanley93@gmail.com">obistanley93@gmail.com</a></em>
+										<em><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng">info@osesconsultantengineering<br>servicesltd.com.ng</a></em>
 									</div>
 								</div>
 								<div class="address-list">
@@ -461,7 +461,7 @@
                            <li title="Go to konstruk">
                                <a class="active" href="index.html">Home</a>
                            </li>
-                          <li>Project</li>
+                          <li>Projects</li>
                        </ul>
 			        </div>
 			    </div>
@@ -882,10 +882,12 @@
 					</div>
 					<div class="textwidget">
 					  <p class="pb-20">
-				   OSES is a firm of Consulting Engineers with professional practice embracing the full range of engineering services in Civil engineering, Electrical engineering, Mechanical engineering and Surveying/ Soil investigations.
+				 
+Oses is a firm of consulting engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying/ soil investigations.
+
 					  </p>
 					  <p class="pb-25">
-						<strong>Opening Hours</strong> : Monday – Sat: 9am to 6pm
+						<strong>Opening Hours</strong> : Monday – Sat: 8am to 4pm
 					  </p>
 					</div>
 					
@@ -896,7 +898,7 @@
 					  <li>
 						<i class="fi fi-rr-map-marker-home"></i>
 						<div class="desc">
-						  NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD,<br> ENUGU, ENUGU STATE, NIGERIA.
+							N0 10, ochumba close, achara layout, agbani road, <br> Enugu, Enugu state, Nigeria
 						</div>
 					  </li>
 					  <li>
@@ -913,7 +915,7 @@
 						  <!-- <a href="mailto:support@devsdesign.com"
 							>support@devsdesign.com</a
 						  ><br /> -->
-						  <a href="mailto:obistanley93@gmail.com.">obistanley93@gmail.com. </a>
+						  <a href="mailto:info@osesconsultantengineeringservicesltd.com.ng">info@osesconsultantengineering<br>servicesltd.com.ng </a>
 						</div>
 					  </li>
 					</ul>
@@ -976,14 +978,14 @@
 					  <li><a href="services-style1.html">Services</a></li>
 					  <li><a href="projectmain.html">Project</a></li>
 					  <li><a href="gallery.html">Gallery</a></li>
-					  <li><a href="faq.html">Faq</a></li>
+					  <li><a href="faq.html">FAQ</a></li>
 					  <li><a href="contact.html">Contact</a></li>
 					</ul>
 				  </div>
 				  <div class="col-lg-6">
 					<div class="copyright text-lg-start text-center">
 					  <p>
-						© 2023 Oses consultant & engineering services. signed By 
+						© 2023 Oses consultant & engineering services. design By 
 						<a href="https://www.zyantechnology.com.ng" target="blank"
 						  >Zayn Technology</a
 						>
