--- a/services-style1.html
+++ b/services-style1.html
@@ -56,7 +56,7 @@
 	   	<div id="pre-load">
             <div id="loader" class="loader">
                 <div class="loader-container">
-                    <div class="loader-icon"><img src="images/fav.png" alt="Konstruk - Construction & Building Html Template "></div>
+                    <div class="loader-icon"><img src="images/fav.png" alt="Oses - Construction & Building Html Template "></div>
                 </div>
             </div>              
         </div>
@@ -434,7 +434,7 @@
 					                  </div>
 					                  <div class="info-content">
 					                      <h4 class="title">Contact</h4>
-					                      <em> NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD, ENUGU, ENUGU STATE, NIGERIA.</em>
+					                      <em> N0 10, ochumba close, achara layout, agbani road, Enugu, Enugu state, Nigeria</em>
 					                  </div>
 					              </div>
 					              <div class="address-list">
@@ -443,7 +443,7 @@
 					                  </div>
 					                  <div class="info-content">
 					                      <h4 class="title">Email</h4>
-					                      <em><a href="mailto:obistanley93@gmail.com">obistanley93@gmail.com</a></em>
+					                      <em><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng">info@osesconsultantengineering<br>servicesltd.com.ng</a></em>
 					                  </div>
 					              </div>
 					              <div class="address-list">
@@ -471,7 +471,7 @@
 			            <h1 class="page-title">
 			               	Our services 
 			            </h1>
-			            <span class="sub-text">OSES CONSULTANT & ENGINEERING SERVICES LTD is to create a reputation for high <br>standards based on integrity, quality and reliability for our services either by working jointly <br>with other renowned first class International or local organizations or wholly so that our <br>clientele will have the best value for their money</span>
+			            <span class="sub-text">Oses consultant & engineering services ltd is to create a reputation for high <br>standards based on integrity, quality and reliability for our services either by working jointly <br>with other renowned first class International or local organizations or wholly so that our <br>clientele will have the best value for their money</span>
 			            <ul class="breadcrumbs-area">
                            <li title="Go to konstruk">
                                <a class="active" href="index.html">Home</a>
@@ -494,7 +494,7 @@
 									<img src="images/services/style12/icons/ser1.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Construction Supervision</a></h4>
+									<h4 class="title"><a href="contact.html">Construction Supervision</a></h4>
 									<p class="services-txt">   We ensures that your project is completed on time, on budget and complies with the relevant regulations and quality</p>
 								</div>
 							</div>
@@ -506,7 +506,7 @@
 									<img src="images/services/style12/icons/ser2.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Environment impact assessment</a></h4>
+									<h4 class="title"><a href="contact.html">Environment impact assessment</a></h4>
 									<p class="services-txt">   We give practical and effective advice, impact assesments and reports on key environmental issues from license application, planning and development through operations and decommissioning.</p>
 								</div>
 							</div>
@@ -518,7 +518,7 @@
 									<img src="images/services/style12/icons/ser3.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Procurement & inspection</a></h4>
+									<h4 class="title"><a href="contact.html">Procurement & inspection</a></h4>
 									<p class="services-txt">  We examin and test products and materials being procured to ensure they meet certain specifications</p>
 								</div>
 							</div>
@@ -530,8 +530,20 @@
 									<img src="images/services/style12/icons/ser4.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Detailed final engineering design</a></h4>
+									<h4 class="title"><a href="contact.html">Detailed final engineering design</a></h4>
 									<p class="services-txt">   We develop a producr from its inception to final assembly, testing and devlivery.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4 col-md-6 mb-20">
+							<div class="services-item">
+								<div class="serial-number">	02</div>
+								<div class="services-icon">
+									<img src="images/services/style12/icons/ser2.png" alt="Images">
+								</div>
+								<div class="services-text">
+									<h4 class="title"><a href="contact.html">Underground water explorations</a></h4>
+									<p class="services-txt">  Exploration of groundwater requires a basic understanding of its position in the subsurface geological setup</p>
 								</div>
 							</div>
 						</div>
@@ -542,7 +554,7 @@
 									<img src="images/services/style12/icons/ser5.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Intake water works</a></h4>
+									<h4 class="title"><a href="contact.html">Intake water works</a></h4>
 									<p class="services-txt">  We can construct new raw wate intake facilities required to divert and transport water from a supply source, such as a river, lake etc.</p>
 								</div>
 							</div>
@@ -554,8 +566,33 @@
 									<img src="images/services/style12/icons/ser6.png" alt="Images">
 								</div>
 								<div class="services-text">
-									<h4 class="title"><a href="">Investigation and baseline studies</a></h4>
+									<h4 class="title"><a href="contact.html">Investigation and baseline studies</a></h4>
 									<p class="services-txt">    We carry out baseline studies on any project.</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-xl-4 col-md-6 mb-20">
+							<div class="services-item">
+								<div class="serial-number">	01</div>
+								<div class="services-icon">
+									<img src="images/services/style12/icons/ser1.png" alt="Images">
+								</div>
+								<div class="services-text">
+									<h4 class="title"><a href="contact.html">Water treatment works</a></h4>
+									<p class="services-txt">  We provide full water treatment process by removing all those substances, wheather biological, chemical, or physical, that are potentially harmful to heart</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-xl-4 col-md-6 md-mb-20">
+							<div class="services-item">
+								<div class="serial-number">	04</div>
+								<div class="services-icon">
+									<img src="images/services/style12/icons/ser4.png" alt="Images">
+								</div>
+								<div class="services-text">
+									<h4 class="title"><a href="contact.html">GIS mapping and related services</a></h4>
+									<p class="services-txt">  Our GIS mapping software can visualize crucial data in the clearest way</p>
 								</div>
 							</div>
 						</div>
@@ -749,7 +786,8 @@
 				                    </div>
 				                    <div class="content-text">
 				                        <h4 class="title"><a href="#">Nigeria office</a></h4>
-				                        <p class="services-txt"> NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD, ENUGU, ENUGU STATE, NIGERIA.</p>
+				                        <p class="services-txt"> 
+											N0 10, ochumba close, achara layout, agbani road, Enugu, Enugu state, Nigeria</p>
 				                    </div>
 				                </div>
 	       	    			</div>
@@ -772,7 +810,7 @@
 	       	    				    <div class="content-text">
 	       	    				        <h4 class="title"><a href="#">Email us</a></h4>
 	       	    				        <p class="services-txt">
-	       	    				        	<a href="mailto:obistanley93@gmail.com">obistanley93@gmail.com</a><br>
+	       	    				        	<a href="mailto:info@osesconsultantengineeringservicesltd.com.ng">info@osesconsultant<br>engineeringservicesltd.com.ng</a><br>
 	       	    				        	<!-- <a href="mailto:test2@gamil.com">test2@gamil.com</a> -->
 	       	    				        </p>
 	       	    				    </div>
@@ -903,7 +941,9 @@
 					</div>
 					<div class="textwidget">
 					  <p class="pb-20">
-				   OSES is a firm of Consulting Engineers with professional practice embracing the full range of engineering services in Civil engineering, Electrical engineering, Mechanical engineering and Surveying/ Soil investigations.
+				  
+Oses is a firm of consulting engineers with professional practice embracing the full range of engineering services in civil engineering, electrical engineering, mechanical engineering and surveying/ soil investigations.
+
 					  </p>
 					  <p class="pb-25">
 						<strong>Opening Hours</strong> : Monday – Sat: 8am to 4pm
@@ -930,7 +970,8 @@
 					  <li>
 						<i class="fi fi-rr-map-marker-home"></i>
 						<div class="desc">
-						  NO 10, OCHUMBA CLOSE, ACHARA LAYOUT, AGBANI ROAD,<br> ENUGU, ENUGU STATE, NIGERIA.
+						 
+ N0 10, ochumba close, achara layout, agbani road, <br> Enugu, Enugu state, Nigeria
 						</div>
 					  </li>
 					  <li>
@@ -947,7 +988,9 @@
 						  <!-- <a href="mailto:support@devsdesign.com"
 							>support@devsdesign.com</a
 						  ><br /> -->
-						  <a href="mailto:obistanley93@gmail.com.">obistanley93@gmail.com. </a>
+						  <a href="mailto:
+						  info@osesconsultantengineeringservicesltd.com.ng">
+							info@osesconsultantengineering<br>servicesltd.com.ng </a>
 						</div>
 					  </li>
 					</ul>
@@ -1008,14 +1051,14 @@
 					  <li><a href="services-style1.html">Services</a></li>
 					  <li><a href="projectmain.html">Project</a></li>
 					  <li><a href="gallery.html">Gallery</a></li>
-					  <li><a href="faq.html">Faq</a></li>
+					  <li><a href="faq.html">FAQ</a></li>
 					  <li><a href="contact.html">Contact</a></li>
 					</ul>
 				  </div>
 				  <div class="col-lg-6">
 					<div class="copyright text-lg-start text-center">
 					  <p>
-						© 2023 Oses consultant & engineering services. signed By 
+						© 2023 Oses consultant & engineering services. design By 
 						<a href="https://www.zyantechnology.com.ng" target="blank"
 						  >Zayn Technology</a
 						>
