--- a/contact.html
+++ b/contact.html
@@ -537,9 +537,9 @@
         <div class="row no-gutters">
           <div class="col-lg-4">
             <div class="contact-map">
-              <!-- <iframe
-                src="https://maps.google.com/maps?q=rstheme&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
-              ></iframe> -->
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7929.690342389784!2d7.5016264079650785!3d6.413934414147968!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a1854c3d673b%3A0x8f575cb56d98b6a4!2sOses%20Consultant%20%26%20Engineering%20Services!5e0!3m2!1sen!2sng!4v1694798031496!5m2!1sen!2sng">
+              ></iframe>
             </div>
           </div>
           <div class="col-lg-4">
