--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                     <a href="services-style1.html">Quality Services</a>
                   </h3>
                   <p class="services-txt">
-                    At Oses consultant & engineering servces qulity service is the bedrock upon which trust, reputation, and client satisfaction are built.
+                    At Oses consultant & engineering services, qulity service is the bedrock upon which trust, reputation, and client satisfaction are built.
                   </p>
                 </div>
               </div>
@@ -774,7 +774,7 @@
                     <a href="services-style1.html">Procurement & inspection</a>
                   </h2>
                   <p class="services-txt">
-                  We examin and test products and materials being procured to ensure they meet certain specifications
+                  We examin and test product and materials being procured to ensure they meet certain specifications
                   </p>
                 </div>
               </div>
@@ -794,7 +794,7 @@
                     >
                   </h2>
                   <p class="services-txt">
-                    We develop a producr from its inception to final assembly, testing and devlivery.
+                    We develop a produce from its inception to final assembly, testing and devlivery.
                   </p>
                 </div>
               </div>
@@ -812,7 +812,7 @@
                     <a href="services-style1.html">Intake water works</a>
                   </h2>
                   <p class="services-txt">
-                   We can construct new raw wate intake facilities required to divert and transport water from a supply source, such as a river, lake etc.
+                   We can construct new raw water intake facilities required to divert and transport water from a supply source, such as a river, lake etc.
                   </p>
                 </div>
               </div>
