--- a/services-style1.html
+++ b/services-style1.html
@@ -531,7 +531,7 @@
 								</div>
 								<div class="services-text">
 									<h4 class="title"><a href="contact.html">Detailed final engineering design</a></h4>
-									<p class="services-txt">   We develop a producr from its inception to final assembly, testing and devlivery.</p>
+									<p class="services-txt">   We develop a product from its inception to final assembly, testing and devlivery.</p>
 								</div>
 							</div>
 						</div>
@@ -555,7 +555,7 @@
 								</div>
 								<div class="services-text">
 									<h4 class="title"><a href="contact.html">Intake water works</a></h4>
-									<p class="services-txt">  We can construct new raw wate intake facilities required to divert and transport water from a supply source, such as a river, lake etc.</p>
+									<p class="services-txt">  We can construct new raw water intake facilities required to divert and transport water from a supply source, such as a river, lake etc.</p>
 								</div>
 							</div>
 						</div>
