--- a/gallery.html
+++ b/gallery.html
@@ -182,7 +182,7 @@
 														</ul> -->
 													</li>
 													<li class=" ">
-														<a href="#">Project</a>
+														<a href="projectmain.html">Project</a>
 														<!-- <ul class="sub-menu">
 															<li class="last-item menu-item-has-children">
 															    <a href="#">Team</a>
@@ -493,13 +493,28 @@
 			   		            </div>
 			   		        </div>
 			   		    </div>
-			   		    <div class="col-lg-4 col-md-6 md-mb-30">
+						<div class="col-lg-4 col-md-6 mb-30">
 			   		        <div class="gallery-item">
 			   		            <div class="gallery-icon">
-			   		                <a class="image-popup" href="images/project/style1/1-4.png"><img src="images/project/style1/1-4.png" alt=""></a>
+			   		                <a class="image-popup" href="images/project/style1/pro-1.png"><img src="images/project/style1/pro-1.png" alt=""></a>
 			   		            </div>
 			   		        </div>
 			   		    </div>
+						<div class="col-lg-4 col-md-6 mb-30">
+			   		        <div class="gallery-item">
+			   		            <div class="gallery-icon">
+			   		                <a class="image-popup" href="images/project/style1/pro-2.png"><img src="images/project/style1/pro-2.png" alt=""></a>
+			   		            </div>
+			   		        </div>
+			   		    </div>
+						<div class="col-lg-4 col-md-6 mb-30">
+			   		        <div class="gallery-item">
+			   		            <div class="gallery-icon">
+			   		                <a class="image-popup" href="images/project/style1/pro-3.png"><img src="images/project/style1/pro-3.png" alt=""></a>
+			   		            </div>
+			   		        </div>
+			   		    </div>
+			   		   
 			   		    <div class="col-lg-4 col-md-6 sm-mb-30">
 			   		        <div class="gallery-item">
 			   		            <div class="gallery-icon">
